MDEV-13923  Assertion `!is_set() || (m_status == DA_OK_BULK &&                     is_bulk_op())' failed upon altering table with geometry field.

Check for the validity of the DEFAULT value for the
        geometry field.